--- a/src/dash/assets/style.css
+++ b/src/dash/assets/style.css
@@ -31,6 +31,13 @@ body {
     max-width: 384px;
 }
 
+.description {
+    color: #114d4d;
+    margin: 1px auto;
+    text-align: left;
+    max-width: 800px;
+}
+
 .wrapper {
     margin-right: auto;
     margin-left: auto;
