Update css style

--- a/src/dash/assets/style.css
+++ b/src/dash/assets/style.css
@@ -37,8 +37,9 @@ body {
 }
 
 .description {
-    color: #114d4d;
-    margin: 4px auto;
+    color: #CFCFCF;
+    margin: 60px auto;
+    margin-bottom: 20px;
     text-align: justify;
     max-width: 1000px;
 }
@@ -52,9 +53,15 @@ body {
     margin-top: 32px;
 }
 
+.text-box {
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
 .card {
     margin-bottom: 24px;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+    background-color: #CFCFCF;
 }
 
 .menu {
